--- a/Front-end/chat-app/src/App.css
+++ b/Front-end/chat-app/src/App.css
@@ -1,15 +1,11 @@
 .App {
   width: 100vw;
   height: 100vh;
-  background: #fff;
+  background: #ddcdcd;
   color: #212121;
   font-family: "Open Sans", sans-serif;
   display: grid;
   place-items: center;
-}
-body {
-  margin: 0%;
-  padding: 0%;
 }
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700");
 
@@ -183,9 +179,17 @@ body {
   color: lightgray;
 }
 
+.typing-indicator {
+  color: #ccc;
+  font-size: 14px;
+  margin: 5px 0;
+}
+
 .chat-window .chat-footer button:hover {
   color: #43a047;
 }
 .hide {
   opacity: 0 !important;
 }
+
+
